shard-operator-parent/shard-operator-v2/src/main/resources/templates/jwt-request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator # Specify the operator
    app.kubernetes.io/component: bridge # used to specify the component
  name: ""
spec:
  jwtRules:
    - issuer: ""
      jwksUri: ""
