shard-operator-parent/shard-operator-v2/src/main/resources/templates/managed-bridge-kubernetes-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: ""
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator # Specify the operator
    app.kubernetes.io/component: bridge # used to specify the component
  annotations:
    operator-sdk/primary-resource-name: ""
    operator-sdk/primary-resource-namespace: ""
spec:
  rules:
    - http:
        paths:
          - path: ""
            pathType: Exact
            backend:
              serviceName: ""
              servicePort: ""
