shard-operator-parent/shard-operator-v2/src/main/resources/templates/managed-bridge-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator # Specify the operator
    app.kubernetes.io/component: bridge # used to specify the component
  annotations:
    operator-sdk/primary-resource-name: ""
    operator-sdk/primary-resource-namespace: ""
  name: ""
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - POST
              - OPTIONS
            paths:
              - ""
      when:
        - key: request.auth.claims[account_id] # user
          values:
            - ""                               # customerId
    - to:
        - operation:
            methods:
              - POST
              - OPTIONS
            paths:
              - ""
      when:
        - key: request.auth.claims[rh-user-id] # service account
          values:
            - ""                               # customerId
